Code optimizations, robust logging